[package]
name = "jetline"
version = "0.3.0"
authors = ["Liwen Guo <lg@livven.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
dirs = "3.0.1"
git2 = "0.13.17"
itertools = "0.10.0"
